# robotics-p2-2024-pasqual-paone-morelli

./: CMakeLists.txt  package.xml  robot info.txt
cfg/: config.rviz  config2.rviz  costmap_common_params.yaml  costmap_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  mapper_params.yaml  move_base_params.yaml  parameters.cfg  rviz_config_file.rviz
goal/: waypoints.csv
launch/: amcl_launch.xml  i.launch  launch.launch  task1.launch  task2.launch
map/: map.pgm  map.world  map.yaml  scout_mini_omni.urdf
src/: goal_action.cpp  gps_to_odom.cpp  lidar_remap.cpp  lidar_to_tf.cpp  node1.cpp  node3.cpp  odom_to_base_link.cpp  odom_to_tf.cpp  tf.cpp
