<?xml version="1.0"?>
<package format="2">
  <name>first_project</name>
  <version>0.0.0</version>
  <description>The first_project package</description>

  <maintainer email="teopa@todo.todo">teopa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <export>
  
  </export>
</package>
